--- a/03_disability.Rmd
+++ b/03_disability.Rmd
@@ -12,9 +12,9 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-![image summary](images/effectsummary.PNG)
+![](images/effectsummary.PNG)
 
-![image summary](images/parameterestimates.PNG)
+![](images/parameterestimates.PNG)
 
 The confidence intervals and tests are Wald-based because the data 
 has more than 1,000 rows.
@@ -29,20 +29,20 @@ Our main goal is understanding the odds of being disabled have on
 being able to work. So to explore further we did a nominal logistic
 regression. 
 
-![image summary](images/effectsummary2.PNG)
+![](images/effectsummary2.PNG)
 
 You can see that all the effects and interactions in the nominal 
 logistic regression were significant with p values of almost all 
 <0.00001
 
-![image summary](images/parameterestimates2.PNG)
+![](images/parameterestimates2.PNG)
 
 You can see that disability which is a binary response is significant, 
 as well as all variable interactions with disability.
 
-![image summary](images/odds1.PNG)
-![image summary](images/odds2.PNG)
-![image summary](images/odds3.PNG)
+![](images/odds1.PNG)
+![](images/odds2.PNG)
+![](images/odds3.PNG)
 
 Normal approximations used for ratio confidence limits effects: 
 disability educ r_sex 
@@ -60,9 +60,9 @@ to see if there was a more straightforward way of explaining the response.
 
 Here is the correlation matric of all the variables included in the PCA. 
 
-![image summary](images/correlations.PNG)
+![](images/correlations.PNG)
 
-![image summary](images/summaryplots.PNG)
+![](images/summaryplots.PNG)
 
 These are the summary plots of the PCA. You can see that some variables
 occupy similar quadrants. Age, wheelchair, and disability are grouped,
@@ -71,7 +71,7 @@ have similar groupings such as sex, race, and metropolitan size. The first
 3 principle components had eigen values of 1 or higher. However the next 
 3 components had eigenvalues of nearly three. 
 
-![image summary](images/eigenvalues.PNG)
+![](images/eigenvalues.PNG)
 
 You can see here that the first three components explain only 53% if the
 total variation which is acceptable but not amazing. If you include the
@@ -81,21 +81,21 @@ but it is not quite as simple as we had hoped.
 
 ![Here are the eigenvectors from our PCA.](images/eigenvectors.PNG)
 
-![image summary](images/screeplot.PNG)
+![](images/screeplot.PNG)
 
 Scree plot showing the eigenvalues. The first six are all fairly similar
 with the first two components especially having higher values. 
 
-![image summary](images/blue.PNG)
+![](images/blue.PNG)
 
 Formula for principle component analysis. It seems largely based on
 wheelchair, disability, family income and education. 
 
-![image summary](images/nominallog.PNG)
+![](images/nominallog.PNG)
 
-![image summary](images/parameterestimates3.PNG)
+![](images/parameterestimates3.PNG)
 
-![image summary](images/oddsratio.PNG)
+![](images/oddsratio.PNG)
 
 We did a nominal linear regression with the six principle components. 
 We found that all the components were significant. 
