--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "My Website"
+title: "The effect of Wheelchair Use in the Labor Force"
 ---
 
-Hello, Website!
+Welcome to our Website!
 
-For more information about simple R Markdown websites, please read the documentation at https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html.
-
-Please also note that simple R Markdown sites are _not_ based on **blogdown**. They are probably good for websites with only a few Rmd documents. For larger-scale and more sophisticated websites (such as blogs), you may want to use **blogdown** instead: https://github.com/rstudio/blogdown.
+This website will inform users how we studied the 2017 National Household Travel survey
+to find out if having a wheelchair made it less likely to have a job, or if unemployment
+was more associated with age, income, educational attainment etc.
