--- a/03_disability.Rmd
+++ b/03_disability.Rmd
@@ -29,20 +29,21 @@ Our main goal is understanding the odds of being disabled have on
 being able to work. So to explore further we did a nominal logistic
 regression. 
 
-![](images/effectsummary2.PNG)
+![](images/newnom.PNG)
+
+![](images/parameterestimates3.PNG)
 
 You can see that all the effects and interactions in the nominal 
 logistic regression were significant with p values of almost all 
 <0.00001
 
-![](images/parameterestimates2.PNG)
+
 
 You can see that disability which is a binary response is significant, 
 as well as all variable interactions with disability.
 
-![](images/odds1.PNG)
-![](images/odds2.PNG)
-![](images/odds3.PNG)
+![](images/oddsratio.PNG)
+
 
 Normal approximations used for ratio confidence limits effects: 
 disability educ r_sex 
@@ -91,7 +92,7 @@ with the first two components especially having higher values.
 Formula for principle component analysis. It seems largely based on
 wheelchair, disability, family income and education. 
 
-![](images/nominallog.PNG)
+![](images/newnom.PNG)
 
 ![](images/parameterestimates3.PNG)
 
@@ -106,7 +107,8 @@ unit change subjects are 2.07 times more likely to not be in the
 workforce. 
 
 This analysis was interesting but is not as clear cut as we would have
-hoped. 
+hoped. We found that income isn't significant and age is barely 
+significant.
 
 
 
